$Id$

2009-08-15 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c, utils.c: Improve handling of --bandwidth and
	  --interval options: Allow either upper or lowercase
	  multiplier letters and give an error if an unknown multiplier
	  character is used.  Previously an unknown multiplier character
	  or one with the wrong case was silently ignored and treated as
	  no multiplier at all.

	* wrappers.c: Change Strtoul so it gives an error if the
	  underlying strtoul function finishes at an unconvertable
	  character other than NULL or whitespace.

	* configure.ac: Added extra warnings "-Wshadow -Wwrite-strings"
	  for gcc.

2009-08-14 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c, ike-scan.h, psk-crack.h, configure.ac, error.c: Removed
	  syslog functionality as this is not used and has been #ifdef'ed out
	  for some time.

2009-05-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Upgraded for autoconf 2.61

2009-03-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* acinclude.m4: Added macros to detect compiler support for
	 -fstack-protect, -D_FORTIFY_SOURCE and -Wformat-security.

	* configure.ac: Conditionally enable compiler flags for
	 -fstack-protect, -D_FORTIFY_SOURCE and -Wformat-security using
	 the new acinclude.m4 autoconf macros.

	* configure.ac: Incremented version to 1.9.2

2008-09-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Improved the description of the --trans option in
	  the help output.

	* wrappers.c: Modified Strtoul so it only permits fully convertable
	  strings.  This avoids the problem mentioned by ML with 1=7/128
	  in an advanced transform specification.

	* ike-scan.c: Corrected those calls to Strtoul that assumed the old
	  behaviour, where a string could be terminated by any non convertable
	  character.

	* check-packet, pkt-custom-proposal.dat: Corrected the advanced
	  transform specification, and added an additional transform using
	  variable length attributes.
